syntax = "proto3";

option go_package = ".;message";

message ServerInfo {
  string server_name = 1;
  string addr = 2;
}

message ServerInfoList {
  repeated ServerInfo list = 1;
}

message ServerList {
  repeated string list = 1;
}

message KeyList {
  repeated string list = 1;
}

message WhoIsMaster {
  Address addr = 1;
  int64 timestamp = 2;
  bool master = 3;
}

message Address {
  string addr = 1;
  string http = 2;
  string raft = 3;
  string tcp = 4;
}